apps/00-infra/keda/overlays/prod/ssa-keda-metrics-apiserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-operator-metrics-apiserver
  namespace: keda
  annotations:
    goldilocks.fairwinds.com/enabled: "true"
    vpa.kubernetes.io/updateMode: "Off"
    argocd.argoproj.io/sync-wave: "1"
