apps/00-infra/keda/overlays/prod/ssa-keda-webhooks.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-admission-webhooks
  namespace: keda
  annotations:
    goldilocks.fairwinds.com/enabled: "true"
    vpa.kubernetes.io/updateMode: "Off"
    argocd.argoproj.io/sync-wave: "1"

spec:
  revisionHistoryLimit: 3
